src/test/deca/syntax/valid/parser/oracle/class_with_two_param.deca
class A{
    float f(int x, float f){}
}