src/test/deca/syntax/invalid/parser/with_object/method_list_params_ident3.deca
class A { a a (éa a){} }